--- a/frontend/components/Navbar.module.css
+++ b/frontend/components/Navbar.module.css
@@ -7,9 +7,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;        
-  background-color: #333;
+ background-color: rgba(51, 51, 51, 0.65);
+  backdrop-filter: blur(9px);
+  -webkit-backdrop-filter: blur(9px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   color: white;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); 
+  
+  
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5); 
   z-index: 1000;             
 }
 
@@ -32,12 +37,12 @@
 }
 
 .logoIcon:hover {
-  transform: rotate(20deg) scale(1.1);
+  transform: rotate(40deg) scale(1.1);
 }
 
 @keyframes gentlePulse {
   0%   { transform: rotate(0deg); }
-  50%  { transform: rotate(10deg); }
+  50%  { transform: rotate(20deg); }
   100% { transform: rotate(0deg); }
 }
 
